# rust_todo_app

./: .gitignore  README.md
rust_todo_api/: .env  Cargo.toml  IMPROVEMENTS.md  README.md
rust_todo_api/migrations/: 20240101000000_create_users.sql  20240101000001_create_todos.sql
rust_todo_api/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
